--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "gulp-rename": "^1.2.0",
         "gulp-rimraf": "^0.1.1",
         "gulp-sass": "^2.2.0",
+        "gulp-shell": "^0.5.2",
         "gulp-streamify": "0.0.5",
         "gulp-uglify": "^1.0.1",
         "gulp-util": "^3.0.1",
